# rover

3d modeli/: Arch.stl  Demo body.stl  Demo roof.stl  Main body.stl  Matrix body.stl  Matrix roof.stl  Roof.stl  Ultrasonic body.stl  Ultrasonic roof.stl  holder down.stl  holder up.stl
rover-pico/: CMakeLists.txt
rover-pico/src/: bluetooth.c  bluetooth.h  demo_module.c  demo_module.h  main.c  matrix_module.c  matrix_module.h  system_manager.c  system_manager.h  ultrasonic_module.c  ultrasonic_module.h
rover_app/: README.md  pubspec.yaml
rover_app/android/app/: build.gradle
rover_app/ios/Runner/: Info.plist
rover_app/ios/Runner.xcodeproj/: project.pbxproj
rover_app/lib/: main.dart
rover_app/lib/assets/icons/: my_icons.dart
rover_app/lib/l10n/: app_en.arb  app_hr.arb  l10n.dart  locale_provider.dart
rover_app/lib/panel_screens/: panel.dart
rover_app/lib/panel_screens/screens/: demo_module.dart  main_panel.dart  matrix_module.dart  ultrasonic_module.dart
rover_app/lib/providers/: bt_controller.dart  panels.dart
rover_app/lib/providers/modules/: demo_module_provider.dart  matrix_module_provider.dart  ultrasonic_module_provider.dart
rover_app/lib/screens/: device_list_screen.dart  privacy_policy_screen.dart  rover_control_screen.dart
rover_app/lib/themes/: blue.dart
rover_app/lib/widgets/: control_button.dart
rover_app/linux/: CMakeLists.txt  my_application.cc
rover_app/macos/Runner.xcodeproj/: project.pbxproj
rover_app/web/: index.html  manifest.json
rover_app/windows/: CMakeLists.txt
rover_app/windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
